restructure file structure and update services page

--- a/consultancy-website-template/html/pages/blog.html
+++ b/consultancy-website-template/html/pages/blog.html
@@ -9,7 +9,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="../../img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,13 +21,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 </head>
 
 <div>
@@ -38,18 +38,18 @@
                 <div class="d-inline-flex align-items-center">
                     <a class="text-body py-2 pe-3 border-end" href=""><small>FAQs</small></a>
                     <a class="text-body py-2 px-3 border-end" href=""><small>Support</small></a>
-                    <a class="text-body py-2 px-3 border-end" href=""><small>Privacy</small></a>
-                    <a class="text-body py-2 px-3 border-end" href=""><small>Policy</small></a>
+                    <!-- <a class="text-body py-2 px-3 border-end" href=""><small>Privacy</small></a>
+                    <a class="text-body py-2 px-3 border-end" href=""><small>Policy</small></a> -->
                     <a class="text-body py-2 ps-3" href=""><small>Career</small></a>
                 </div>
             </div>
             <div class="col-md-6 text-center text-lg-end">
                 <div class="position-relative d-inline-flex align-items-center bg-primary text-white top-shape px-5">
                     <div class="me-3 pe-3 border-end py-2">
-                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@example.com</p>
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@marytechenock Solutions.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</p>
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+263 788 684 321</p>
                     </div>
                 </div>
             </div>
@@ -60,17 +60,15 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>consult</h1>
-        </a>
+        <img class="logo w-100" src="../../img/Image1.jpeg" alt="Image">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="../../index.html" class="nav-item nav-link">Home</a>
+                <a href="../about.html" class="nav-item nav-link">About</a>
+                <a href="../service.html" class="nav-item nav-link">Services</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
@@ -82,7 +80,7 @@
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="../contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
     </nav>
@@ -112,7 +110,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -133,7 +131,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -154,7 +152,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -175,7 +173,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -196,7 +194,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -217,7 +215,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -238,7 +236,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -259,7 +257,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -280,7 +278,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -301,7 +299,7 @@
                     <div class="col-xl-6 col-lg-12 col-md-6">
                         <div class="blog-item">
                             <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                                <img class="img-fluid" src="../../img/blog-1.jpg" alt="">
                             </div>
                             <div class="bg-secondary d-flex">
                                 <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -370,27 +368,27 @@
                 <div class="mb-5">
                     <h2 class="mb-4">Recent Post</h2>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                        <img class="img-fluid" src="../../img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
                         <a href="" class="h5 d-flex align-items-center bg-secondary px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
                         </a>
                     </div>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                        <img class="img-fluid" src="../../img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
                         <a href="" class="h5 d-flex align-items-center bg-secondary px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
                         </a>
                     </div>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                        <img class="img-fluid" src="../../img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
                         <a href="" class="h5 d-flex align-items-center bg-secondary px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
                         </a>
                     </div>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                        <img class="img-fluid" src="../../img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
                         <a href="" class="h5 d-flex align-items-center bg-secondary px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
                         </a>
                     </div>
                     <div class="d-flex">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
+                        <img class="img-fluid" src="../../img/blog-1.jpg" style="width: 100px; height: 100px; object-fit: cover;" alt="">
                         <a href="" class="h5 d-flex align-items-center bg-secondary px-3 mb-0">Lorem ipsum dolor sit amet adipis elit
                         </a>
                     </div>
@@ -399,7 +397,7 @@
 
                 <!-- Image Start -->
                 <div class="mb-5">
-                    <img src="img/blog-1.jpg" alt="" class="img-fluid">
+                    <img src="../../img/blog-1.jpg" alt="" class="img-fluid">
                 </div>
                 <!-- Image End -->
 
@@ -493,7 +491,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">Your Site Name</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">MARYTECHENOCK IT Solutions</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
     </div>
     <!-- Footer End -->
 
@@ -505,12 +503,12 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../../lib/easing/easing.min.js"></script>
+    <script src="../../lib/waypoints/waypoints.min.js"></script>
+    <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="../../js/main.js"></script>
 </body>
 
 </html>
