--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -48,7 +48,7 @@
                         <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@marytechenock Solutions.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+263788684321</p>
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+263 788 684 321</p>
                     </div>
                 </div>
             </div>
@@ -59,28 +59,27 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <a href="index.html" class="navbar-brand p-0">            
-           <img class="logo w-100" src="img/Image1.jpeg" alt="Image">
+        <img class="logo w-100" src="img/Image1.jpeg" alt="Image">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="index.html" class="nav-item nav-link active"><i class="fa-solid fa-house"></i>Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="html/about.html" class="nav-item nav-link">About</a>
+                <a href="html/service.html" class="nav-item nav-link">Services</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                        <a href="detail.html" class="dropdown-item">Blog Detail</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Quote Form</a>
-                        <a href="team.html" class="dropdown-item">The Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="html/pages/blog.html" class="dropdown-item">Blog Grid</a>
+                        <a href="html/pages/detail.html" class="dropdown-item">Blog Detail</a>
+                        <a href="html/pages/feature.html" class="dropdown-item">Features</a>
+                        <a href="html/pages/quote.html" class="dropdown-item">Quote Form</a>
+                        <a href="html/pages/team.html" class="dropdown-item">The Team</a>
+                        <a href="html/pages/testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="html/contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
     </nav>
